WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29498
REGRESSION (
r40098
) Crash at WebCore::RenderBlock::layoutBlock()
https://bugs.webkit.org/show_bug.cgi?id=29498
Summary
REGRESSION (r40098) Crash at WebCore::RenderBlock::layoutBlock()
mitz
Reported
2009-09-18 11:38:28 PDT
<
rdar://problem/7050773
> Patch forthcoming.
Attachments
Make AccessibilityRenderObject::updateBackingStore() recalc style
(10.40 KB, patch)
2009-09-18 11:47 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-09-18 11:47:57 PDT
Created
attachment 39772
[details]
Make AccessibilityRenderObject::updateBackingStore() recalc style
mitz
Comment 2
2009-09-18 12:01:41 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/48521
>.
Eric Seidel (no email)
Comment 3
2009-09-18 12:25:31 PDT
Looks like this was missing a test update:
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r48521%20(5092)/results.html
mitz
Comment 4
2009-09-18 12:42:33 PDT
(In reply to
comment #3
)
> Looks like this was missing a test update: >
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r48521%20(5092)/results.html
Thanks. Updated in
r48523
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug